Collapse correctly in both sorting

--- a/app/styles/modules/mobile.scss
+++ b/app/styles/modules/mobile.scss
@@ -1,7 +1,10 @@
 .mobile {
 	padding: 15px;
+	padding-left: 25px;
 	font-size: 15px;
 	line-height: 1.5em;
+
+
 
 	h3 {
 		margin-top: 16px;
